# pytorch_fundamentals

./: Falcon_autotune.ipynb  Torch_fundamentals.ipynb  simple_model.ipynb  testing_micrograd.ipynb
mlflow_expt_tracking/: .dockerignore  Makefile  docker-compose.yaml  pyproject.toml  test_setup.py
mlflow_expt_tracking/.envs/: .mlflow-dev
mlflow_expt_tracking/docker/: Dockerfile
mlflow_expt_tracking/src/: mlflow-sklearn-example.py
mlflow_expt_tracking/track_expt/src/: mlflow-sklearn-example.py
recommender_systems/reco/src/: matrix_factorization.py
working_with_hydra/: config.yaml  omega_conf_basic.py  omega_config_advanced.py
working_with_hydra/outputs/2025-04-11/20-08-49/.hydra/: hydra.yaml
working_with_hydra/outputs/2025-04-11/20-10-35/.hydra/: hydra.yaml
