[tool.poetry]
name = "mlflow-tracking-server"
version = "0.1.0"
description = "ML flow tracking server"
authors = ["Shaunak Basu <basu901@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "==2.5.0"
psycopg2-binary = "~=2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"